# skymp-client-launcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md
.github/workflows/: auto-tag-release.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  SETUP.md
launcher/: index.html  package-lock.json  package.json  vite.config.ts
launcher/src/: App.css  App.tsx
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: main.rs
master-server/: package.json
master-server/src/: index.js
master-server/src/routes/: servers.js
